# secrets-manager

./: Cargo.toml  README.md  dist-workspace.toml  neovim.json
.github/workflows/: release.yml  update-cache.yml
src/: config.rs  lib.rs  main.rs  secrets.rs
src/commands/: config.rs  mod.rs  secrets.rs  store.rs
src/secrets/: aws.rs  mod.rs
