[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/giallojoe/secrets-manager.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.9"
aws-sdk-secretsmanager = "1.20.1"
clap = { version = "4.5.4", features = ["derive"] }
is-terminal = "0.4.12"
platform-dirs = "0.3.0"
securestore = "0.100.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
