[package]
name = "secrets-manager"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/giallojoe/secrets-manager"
authors = ["Gioacchino Giallombardo <giallombardogioacchino@gmail.com>"]
license = "MIT"
description = "A tool to manage secrets and configurations and working with aws secrets-manager, inspired by https://github.com/ThePrimeagen/projector"
homepage = "https://github.com/giallojoe/secrets-manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
aws-config = "1.1.9"
aws-sdk-secretsmanager = "1.20.1"
clap = { version = "4.5.4", features = ["derive"] }
is-terminal = "0.4.12"
platform-dirs = "0.3.0"
securestore = "0.100.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "giallojoe/homebrew-secrets-manager"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
