[package]
name = "secrets-manager"
version = "1.0.6"
edition = "2021"
repository = "https://github.com/giallojoe/secrets-manager"
authors = ["Gioacchino Giallombardo <giallombardogioacchino@gmail.com>"]
license = "MIT"
description = "A tool to manage secrets and configurations and working with aws secrets-manager, inspired by https://github.com/ThePrimeagen/projector"
homepage = "https://github.com/giallojoe/secrets-manager"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
aws-config = "1.1.9"
aws-sdk-secretsmanager = "1.20.1"
clap = { version = "4.5.4", features = ["derive"] }
is-terminal = "0.4.12"
platform-dirs = "0.3.0"
securestore = "0.100.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
